
[TestParseModuleNoErrors/ExprStmts - 1]
&ast.ExprStmt{
    Expr: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name:      "foo",
            Namespace: 0,
            Source:    nil,
            span:      ast.Span{
                Start:    ast.Location{Line:2, Column:5},
                End:      ast.Location{Line:2, Column:8},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Args: {
        },
        OptChain: false,
        span:     ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:2, Column:10},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:2, Column:10},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/VarDecls - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:2, Column:9},
                End:      ast.Location{Line:2, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 5,
                span:  ast.Span{
                    Start:    ast.Location{Line:2, Column:13},
                    End:      ast.Location{Line:2, Column:14},
                    SourceID: 0,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:13},
                End:      ast.Location{Line:2, Column:14},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:2, Column:14},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:2, Column:14},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/FuncDecls - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "add",
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:8},
                End:      ast.Location{Line:2, Column:11},
                SourceID: 0,
            },
        },
        FuncSig: ast.FuncSig{
            TypeParams: {
            },
            Params: {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "a",
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:2, Column:12},
                            End:      ast.Location{Line:2, Column:13},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "b",
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:2, Column:15},
                            End:      ast.Location{Line:2, Column:16},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
            },
            Return: nil,
            Throws: nil,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.BinaryExpr{
                        Left: &ast.IdentExpr{
                            Name:      "a",
                            Namespace: 0,
                            Source:    nil,
                            span:      ast.Span{
                                Start:    ast.Location{Line:3, Column:13},
                                End:      ast.Location{Line:3, Column:14},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        Op:    "+",
                        Right: &ast.IdentExpr{
                            Name:      "b",
                            Namespace: 0,
                            Source:    nil,
                            span:      ast.Span{
                                Start:    ast.Location{Line:3, Column:17},
                                End:      ast.Location{Line:3, Column:18},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:3, Column:13},
                            End:      ast.Location{Line:3, Column:18},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:3, Column:6},
                        End:      ast.Location{Line:3, Column:18},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:2, Column:18},
                End:      ast.Location{Line:4, Column:6},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:4, Column:6},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:4, Column:6},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/SplitExprOnNewline - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    1,
        Pattern: &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:2, Column:9},
                End:      ast.Location{Line:2, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.IdentExpr{
            Name:      "x",
            Namespace: 0,
            Source:    nil,
            span:      ast.Span{
                Start:    ast.Location{Line:2, Column:13},
                End:      ast.Location{Line:2, Column:14},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:2, Column:14},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:2, Column:14},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/MultilineExprInParens - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    1,
        Pattern: &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:2, Column:9},
                End:      ast.Location{Line:2, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.BinaryExpr{
            Left: &ast.IdentExpr{
                Name:      "x",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:2, Column:14},
                    End:      ast.Location{Line:2, Column:15},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Op:    "-",
            Right: &ast.IdentExpr{
                Name:      "y",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:3, Column:6},
                    End:      ast.Location{Line:3, Column:7},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:14},
                End:      ast.Location{Line:3, Column:7},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:3, Column:7},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:3, Column:7},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/MultilineExprInBrackets - 1]
&ast.ExprStmt{
    Expr: &ast.IndexExpr{
        Object: &ast.IdentExpr{
            Name:      "a",
            Namespace: 0,
            Source:    nil,
            span:      ast.Span{
                Start:    ast.Location{Line:2, Column:5},
                End:      ast.Location{Line:2, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Index: &ast.BinaryExpr{
            Left: &ast.IdentExpr{
                Name:      "base",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:2, Column:7},
                    End:      ast.Location{Line:2, Column:11},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Op:    "+",
            Right: &ast.IdentExpr{
                Name:      "offset",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:3, Column:6},
                    End:      ast.Location{Line:3, Column:12},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:7},
                End:      ast.Location{Line:3, Column:12},
                SourceID: 0,
            },
            inferredType: nil,
        },
        OptChain: false,
        span:     ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:3, Column:13},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:3, Column:13},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/SplitExprInNewScope - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "funcs",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:2, Column:9},
                End:      ast.Location{Line:2, Column:14},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.TupleExpr{
            Elems: {
                &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        TypeParams: {
                        },
                        Params: {
                        },
                        Return: nil,
                        Throws: nil,
                    },
                    Body: ast.Block{
                        Stmts: {
                            &ast.DeclStmt{
                                Decl: &ast.VarDecl{
                                    Kind:    1,
                                    Pattern: &ast.IdentPat{
                                        Name:    "a",
                                        Default: nil,
                                        span:    ast.Span{
                                            Start:    ast.Location{Line:4, Column:11},
                                            End:      ast.Location{Line:4, Column:12},
                                            SourceID: 0,
                                        },
                                        inferredType: nil,
                                    },
                                    TypeAnn: nil,
                                    Init:    &ast.IdentExpr{
                                        Name:      "x",
                                        Namespace: 0,
                                        Source:    nil,
                                        span:      ast.Span{
                                            Start:    ast.Location{Line:4, Column:15},
                                            End:      ast.Location{Line:4, Column:16},
                                            SourceID: 0,
                                        },
                                        inferredType: nil,
                                    },
                                    export:  false,
                                    declare: false,
                                    span:    ast.Span{
                                        Start:    ast.Location{Line:4, Column:7},
                                        End:      ast.Location{Line:4, Column:16},
                                        SourceID: 0,
                                    },
                                    InferredType: nil,
                                },
                                span: ast.Span{
                                    Start:    ast.Location{Line:4, Column:7},
                                    End:      ast.Location{Line:4, Column:16},
                                    SourceID: 0,
                                },
                            },
                            &ast.ExprStmt{
                                Expr: &ast.UnaryExpr{
                                    Op:  1,
                                    Arg: &ast.IdentExpr{
                                        Name:      "y",
                                        Namespace: 0,
                                        Source:    nil,
                                        span:      ast.Span{
                                            Start:    ast.Location{Line:5, Column:8},
                                            End:      ast.Location{Line:5, Column:9},
                                            SourceID: 0,
                                        },
                                        inferredType: nil,
                                    },
                                    span: ast.Span{
                                        Start:    ast.Location{Line:5, Column:7},
                                        End:      ast.Location{Line:5, Column:9},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                span: ast.Span{
                                    Start:    ast.Location{Line:5, Column:7},
                                    End:      ast.Location{Line:5, Column:9},
                                    SourceID: 0,
                                },
                            },
                        },
                        Span: ast.Span{
                            Start:    ast.Location{Line:3, Column:11},
                            End:      ast.Location{Line:6, Column:7},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:3, Column:6},
                        End:      ast.Location{Line:6, Column:7},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:17},
                End:      ast.Location{Line:7, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:7, Column:6},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:7, Column:6},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/ExprStmts - 2]
&ast.ExprStmt{
    Expr: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name:      "bar",
            Namespace: 0,
            Source:    nil,
            span:      ast.Span{
                Start:    ast.Location{Line:3, Column:5},
                End:      ast.Location{Line:3, Column:8},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Args: {
        },
        OptChain: false,
        span:     ast.Span{
            Start:    ast.Location{Line:3, Column:5},
            End:      ast.Location{Line:3, Column:10},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:3, Column:5},
        End:      ast.Location{Line:3, Column:10},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/VarDecls - 2]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "b",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:3, Column:9},
                End:      ast.Location{Line:3, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 10,
                span:  ast.Span{
                    Start:    ast.Location{Line:3, Column:13},
                    End:      ast.Location{Line:3, Column:15},
                    SourceID: 0,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:3, Column:13},
                End:      ast.Location{Line:3, Column:15},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:3, Column:5},
            End:      ast.Location{Line:3, Column:15},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:3, Column:5},
        End:      ast.Location{Line:3, Column:15},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/VarDecls - 3]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "sum",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:4, Column:9},
                End:      ast.Location{Line:4, Column:12},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.BinaryExpr{
            Left: &ast.IdentExpr{
                Name:      "a",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:4, Column:15},
                    End:      ast.Location{Line:4, Column:16},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Op:    "+",
            Right: &ast.IdentExpr{
                Name:      "b",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:4, Column:19},
                    End:      ast.Location{Line:4, Column:20},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:4, Column:15},
                End:      ast.Location{Line:4, Column:20},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:4, Column:5},
            End:      ast.Location{Line:4, Column:20},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:4, Column:5},
        End:      ast.Location{Line:4, Column:20},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/FuncDecls - 2]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "sub",
            span: ast.Span{
                Start:    ast.Location{Line:5, Column:8},
                End:      ast.Location{Line:5, Column:11},
                SourceID: 0,
            },
        },
        FuncSig: ast.FuncSig{
            TypeParams: {
            },
            Params: {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "a",
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:5, Column:12},
                            End:      ast.Location{Line:5, Column:13},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "b",
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:5, Column:15},
                            End:      ast.Location{Line:5, Column:16},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
            },
            Return: nil,
            Throws: nil,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.BinaryExpr{
                        Left: &ast.IdentExpr{
                            Name:      "a",
                            Namespace: 0,
                            Source:    nil,
                            span:      ast.Span{
                                Start:    ast.Location{Line:6, Column:13},
                                End:      ast.Location{Line:6, Column:14},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        Op:    "-",
                        Right: &ast.IdentExpr{
                            Name:      "b",
                            Namespace: 0,
                            Source:    nil,
                            span:      ast.Span{
                                Start:    ast.Location{Line:6, Column:17},
                                End:      ast.Location{Line:6, Column:18},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:6, Column:13},
                            End:      ast.Location{Line:6, Column:18},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:6, Column:6},
                        End:      ast.Location{Line:6, Column:18},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:5, Column:18},
                End:      ast.Location{Line:7, Column:6},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:5, Column:5},
            End:      ast.Location{Line:7, Column:6},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:5, Column:5},
        End:      ast.Location{Line:7, Column:6},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/IfElse - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "x",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:2, Column:9},
                End:      ast.Location{Line:2, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.IfElseExpr{
            Cond: &ast.IdentExpr{
                Name:      "cond",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:2, Column:16},
                    End:      ast.Location{Line:2, Column:20},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Cons: ast.Block{
                Stmts: {
                    &ast.DeclStmt{
                        Decl: &ast.VarDecl{
                            Kind:    1,
                            Pattern: &ast.IdentPat{
                                Name:    "a",
                                Default: nil,
                                span:    ast.Span{
                                    Start:    ast.Location{Line:3, Column:10},
                                    End:      ast.Location{Line:3, Column:11},
                                    SourceID: 0,
                                },
                                inferredType: nil,
                            },
                            TypeAnn: nil,
                            Init:    &ast.LiteralExpr{
                                Lit: &ast.NumLit{
                                    Value: 5,
                                    span:  ast.Span{
                                        Start:    ast.Location{Line:3, Column:14},
                                        End:      ast.Location{Line:3, Column:15},
                                        SourceID: 0,
                                    },
                                },
                                span: ast.Span{
                                    Start:    ast.Location{Line:3, Column:14},
                                    End:      ast.Location{Line:3, Column:15},
                                    SourceID: 0,
                                },
                                inferredType: nil,
                            },
                            export:  false,
                            declare: false,
                            span:    ast.Span{
                                Start:    ast.Location{Line:3, Column:6},
                                End:      ast.Location{Line:3, Column:15},
                                SourceID: 0,
                            },
                            InferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:3, Column:6},
                            End:      ast.Location{Line:3, Column:15},
                            SourceID: 0,
                        },
                    },
                    &ast.ExprStmt{
                        Expr: &ast.UnaryExpr{
                            Op:  1,
                            Arg: &ast.LiteralExpr{
                                Lit: &ast.NumLit{
                                    Value: 10,
                                    span:  ast.Span{
                                        Start:    ast.Location{Line:4, Column:7},
                                        End:      ast.Location{Line:4, Column:9},
                                        SourceID: 0,
                                    },
                                },
                                span: ast.Span{
                                    Start:    ast.Location{Line:4, Column:7},
                                    End:      ast.Location{Line:4, Column:9},
                                    SourceID: 0,
                                },
                                inferredType: nil,
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:4, Column:6},
                                End:      ast.Location{Line:4, Column:9},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:4, Column:6},
                            End:      ast.Location{Line:4, Column:9},
                            SourceID: 0,
                        },
                    },
                },
                Span: ast.Span{
                    Start:    ast.Location{Line:2, Column:21},
                    End:      ast.Location{Line:5, Column:6},
                    SourceID: 0,
                },
            },
            Alt: &ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: {
                        &ast.DeclStmt{
                            Decl: &ast.VarDecl{
                                Kind:    1,
                                Pattern: &ast.IdentPat{
                                    Name:    "b",
                                    Default: nil,
                                    span:    ast.Span{
                                        Start:    ast.Location{Line:6, Column:11},
                                        End:      ast.Location{Line:6, Column:12},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                TypeAnn: nil,
                                Init:    &ast.LiteralExpr{
                                    Lit: &ast.NumLit{
                                        Value: 10,
                                        span:  ast.Span{
                                            Start:    ast.Location{Line:6, Column:15},
                                            End:      ast.Location{Line:6, Column:17},
                                            SourceID: 0,
                                        },
                                    },
                                    span: ast.Span{
                                        Start:    ast.Location{Line:6, Column:15},
                                        End:      ast.Location{Line:6, Column:17},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                export:  false,
                                declare: false,
                                span:    ast.Span{
                                    Start:    ast.Location{Line:6, Column:7},
                                    End:      ast.Location{Line:6, Column:17},
                                    SourceID: 0,
                                },
                                InferredType: nil,
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:6, Column:7},
                                End:      ast.Location{Line:6, Column:17},
                                SourceID: 0,
                            },
                        },
                        &ast.ExprStmt{
                            Expr: &ast.UnaryExpr{
                                Op:  1,
                                Arg: &ast.LiteralExpr{
                                    Lit: &ast.NumLit{
                                        Value: 5,
                                        span:  ast.Span{
                                            Start:    ast.Location{Line:7, Column:7},
                                            End:      ast.Location{Line:7, Column:8},
                                            SourceID: 0,
                                        },
                                    },
                                    span: ast.Span{
                                        Start:    ast.Location{Line:7, Column:7},
                                        End:      ast.Location{Line:7, Column:8},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                span: ast.Span{
                                    Start:    ast.Location{Line:7, Column:6},
                                    End:      ast.Location{Line:7, Column:8},
                                    SourceID: 0,
                                },
                                inferredType: nil,
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:7, Column:6},
                                End:      ast.Location{Line:7, Column:8},
                                SourceID: 0,
                            },
                        },
                    },
                    Span: ast.Span{
                        Start:    ast.Location{Line:5, Column:12},
                        End:      ast.Location{Line:8, Column:6},
                        SourceID: 0,
                    },
                },
                Expr: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:12},
                End:      ast.Location{Line:8, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:8, Column:6},
            SourceID: 0,
        },
        InferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:8, Column:6},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/SplitExprOnNewline - 2]
&ast.ExprStmt{
    Expr: &ast.UnaryExpr{
        Op:  1,
        Arg: &ast.IdentExpr{
            Name:      "y",
            Namespace: 0,
            Source:    nil,
            span:      ast.Span{
                Start:    ast.Location{Line:3, Column:6},
                End:      ast.Location{Line:3, Column:7},
                SourceID: 0,
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start:    ast.Location{Line:3, Column:5},
            End:      ast.Location{Line:3, Column:7},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:3, Column:5},
        End:      ast.Location{Line:3, Column:7},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/MemberAssignment - 1]
&ast.ExprStmt{
    Expr: &ast.BinaryExpr{
        Left: &ast.MemberExpr{
            Object: &ast.IdentExpr{
                Name:      "p",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:2, Column:5},
                    End:      ast.Location{Line:2, Column:6},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Prop: &ast.Ident{
                Name: "x",
                span: ast.Span{
                    Start:    ast.Location{Line:2, Column:7},
                    End:      ast.Location{Line:2, Column:8},
                    SourceID: 0,
                },
            },
            OptChain: false,
            span:     ast.Span{
                Start:    ast.Location{Line:2, Column:5},
                End:      ast.Location{Line:2, Column:8},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Op:    "=",
        Right: &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 5,
                span:  ast.Span{
                    Start:    ast.Location{Line:2, Column:11},
                    End:      ast.Location{Line:2, Column:12},
                    SourceID: 0,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:11},
                End:      ast.Location{Line:2, Column:12},
                SourceID: 0,
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:2, Column:12},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:2, Column:12},
        SourceID: 0,
    },
}
---

[TestParseModuleNoErrors/MemberAssignment - 2]
&ast.ExprStmt{
    Expr: &ast.BinaryExpr{
        Left: &ast.MemberExpr{
            Object: &ast.IdentExpr{
                Name:      "p",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:3, Column:5},
                    End:      ast.Location{Line:3, Column:6},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Prop: &ast.Ident{
                Name: "y",
                span: ast.Span{
                    Start:    ast.Location{Line:3, Column:7},
                    End:      ast.Location{Line:3, Column:8},
                    SourceID: 0,
                },
            },
            OptChain: false,
            span:     ast.Span{
                Start:    ast.Location{Line:3, Column:5},
                End:      ast.Location{Line:3, Column:8},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Op:    "=",
        Right: &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 10,
                span:  ast.Span{
                    Start:    ast.Location{Line:3, Column:11},
                    End:      ast.Location{Line:3, Column:13},
                    SourceID: 0,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:3, Column:11},
                End:      ast.Location{Line:3, Column:13},
                SourceID: 0,
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start:    ast.Location{Line:3, Column:5},
            End:      ast.Location{Line:3, Column:13},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:3, Column:5},
        End:      ast.Location{Line:3, Column:13},
        SourceID: 0,
    },
}
---
